--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,9 @@
+0.0.9
+Updated documentation and prepared for push to cran. Also changed the default parallel typefrom SOCK, which depended on snow, to PSOCK.
+-----------------------------------------
+0.0.8
+Added adjacency checks instead of merely the random checks.
+-----------------------------------------
 0.0.7
 Updated the double cancellation condition to handle both of the true antecedents.
 -----------------------------------------
